--- a/src/portfolio.css
+++ b/src/portfolio.css
@@ -2,6 +2,7 @@
 .bgimg{
     background-image:url('../public/bg.jpg');
     background-size:cover;
+    height:100vh;
 }
 #navhead{
     color: bisque;
